# LSUJSSL

./: .editorconfig  .flake8  .gitignore  ABSOLUTE_FINAL_AUDIT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEMO_OUTPUT.txt  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  Makefile  PRODUCTION_AUDIT_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REPO_STRUCTURE.md  SECURITY.md  demo.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
satellite_sim/: __init__.py
satellite_sim/channel/: __init__.py  uplink.py
satellite_sim/cli/: sat_cli.py
satellite_sim/crypto/: __init__.py  hmac_signer.py  verifier.py
satellite_sim/ground_station/: __init__.py  legit.py  packet_builder.py  rogue.py
satellite_sim/satellite/: __init__.py  firewall.py  telemetry.py
tests/: __init__.py  test_firewall.py  test_hmac.py  test_packets.py  test_telemetry.py  test_uplink.py
