[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-satellite-sim"
version = "1.0.0"
description = "LEO Satellite Command Link Security Simulator with CCSDS and HMAC Authentication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raouf", email = "raouf@example.com"}
]
keywords = ["satellite", "security", "CCSDS", "aerospace", "cryptography", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "ccsdspy>=0.0.14",
    "cryptography>=41.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
sat-sim = "satellite_sim.cli.sat_cli:app"

[project.urls]
Homepage = "https://github.com/your-username/leo-satellite-sim"
Documentation = "https://github.com/your-username/leo-satellite-sim#readme"
Repository = "https://github.com/your-username/leo-satellite-sim"
Issues = "https://github.com/your-username/leo-satellite-sim/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
